# py-webdav

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  EVENT_KEY_HANDLING.md  ICS_FEED_IMPLEMENTATION_PLAN.md  INFORM_API_QUIRKS.md  README.python.md  Readme.md  check_dtstart_mismatch.py  check_ical_output.py  diagnose_event_keys.py  diagnose_series_sync.py  docker-compose.yml  fly.toml  openapi.json  pyproject.toml  test_caldav_query_series.py  test_immediate_resync.py  test_occurrence_modify.py  test_occurrence_per_event.py  test_patch_issues.py  test_rrule_parsing.py  test_series_caldav_workflow.py  test_series_date_parsing.py  test_series_daterange.py  test_series_events.py  test_series_update_cycle.py  test_timezone_conversion.py  test_uuid_handling.py  test_uuid_vs_occurrence.py  verify_datetime_fix.py  verify_full_event_fetch.py
.github/workflows/: docker-build.yml
docs/: INFORM_API_QUIRKS.md
examples/: README.md  caldav_carddav_server.py  create_sample_data.py
py_webdav/: __init__.py  client.py  debug.py  fs_local.py  ics_feed.py  inform_api_client.py  inform_calendar_utils.py  principal.py  server.py  webdav.py
py_webdav/caldav/: __init__.py  backend.py  caldav.py  fs_backend.py  inform_backend.py  report.py  server.py
py_webdav/carddav/: __init__.py  backend.py  carddav.py  fs_backend.py  inform_backend.py  report.py  server.py
py_webdav/cmd/: __init__.py  server.py
py_webdav/internal/: __init__.py  client.py  elements.py  internal.py  server.py  xml_utils.py
tests/: README.md  test_all_day_recurring.py  test_caldav.py  test_caldav_query_series.py  test_carddav.py  test_datetime_formats.py  test_elements.py  test_empty_patch.py  test_inform_integration.py  test_series_caldav_workflow.py
(+26 files in other folders)
