[project]
name = "py-webdav"
version = "0.1.0"
description = "A Python library for WebDAV, CalDAV and CardDAV"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.37.0",
    "httpx>=0.27.0",
    "lxml>=5.2.0",
    "icalendar>=6.0.0",
    "vobject>=0.9.7",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-python-dateutil>=2.9.0",
    "lxml-stubs>=0.5.1",
    "types-vobject>=0.9.9.20250708",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # unused imports in __init__.py

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = 'tests'

[tool.setuptools]
packages = ["py_webdav"]

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "types-icalendar>=6.3.2.20251222",
    "types-vobject>=0.9.9.20250708",
]
